opencollabnew/css/screen.css: Prevent scrollbar from overlapping navbar and user icon on IE.

--- a/collab/htdocs/opencollabnew/css/screen.css
+++ b/collab/htdocs/opencollabnew/css/screen.css
@@ -4,6 +4,11 @@ Copyright (c) 2001, 2002, 2003 by Juergen Hermann
             2013 by Lauri Pokka
 */
 
+html {
+    -ms-overflow-style: scrollbar;
+
+}
+
 body {
     display: -webkit-flex;
     display: flex;
